@@ -1,3 +1,8 @@
+2009-11-08  Richard Guenther  <rguenther@suse.de>
+
+	PR rtl-optimization/41928
+	* gfortran.dg/pr41928.f90: New testcase.
+
 2009-11-07  Jason Merrill  <jason@redhat.com>
 
 	PR c++/18451
